--- a/personal-site/styles/styles.css
+++ b/personal-site/styles/styles.css
@@ -411,7 +411,41 @@ nav a:hover {
     text-align: center;
     font-family: var(--paragraph-font);
 }
-  
+
+.modal {
+    background: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.25s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal.open {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.modal-content {
+    max-width: 90%;
+    max-height: 90%;
+    transform: scale(0.5);
+    transition: transform 0.25s ease-out;
+}
+
+.modal-content.open {
+    transform: scale(1);
+}
+
+
+
+
 
 
 @media only screen and (max-width: 600px) {
